--- a/package.json
+++ b/package.json
@@ -1,40 +1,50 @@
 {
-	"name": "Change the name",
-	"version": "0.0.1",
-	"private": true,
-	"dependencies": {
-		"@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
-		"@testing-library/jest-dom": "5.16.5",
-		"@testing-library/react": "14.0.0",
-		"@testing-library/user-event": "14.4.3",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-icons": "4.8.0",
-		"react-redux": "8.0.5",
-		"react-router-dom": "6.11.1",
-		"react-scripts": "5.0.1",
-		"redux": "4.2.1",
-		"redux-thunk": "2.4.2",
-		"web-vitals": "3.3.1"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not op_mini all"
-	],
-	"devDependencies": {
-		"babel-plugin-module-resolver": "^5.0.0"
-	}
+  "name": "app",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "serve:ssr:app": "node dist/app/server/server.mjs"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^17.3.0",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
+    "@angular/platform-server": "^17.3.0",
+    "@angular/router": "^17.3.0",
+    "@angular/ssr": "^17.3.0",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "express": "^4.18.2",
+    "leaflet": "^1.9.4",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.3"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^17.3.0",
+    "@angular/cli": "^17.3.0",
+    "@angular/compiler-cli": "^17.3.0",
+    "@types/express": "^4.17.17",
+    "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.8",
+    "@types/node": "^18.18.0",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.4.2"
+  },
+  "compilerOptions": {
+    "resolveJsonModule": true
+  }
 }
