--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.3.0",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,6 +34,7 @@
     "@angular/cli": "^17.3.0",
     "@angular/compiler-cli": "^17.3.0",
     "@types/express": "^4.17.17",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^18.18.0",
